# animal-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: run_report.sh
src/animal_detector/: batch_report.py  streamlit_app.py
src/animal_detector/modules/: config.py  detector.py  pipeline.py  plotter.py
